--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cryptomines",
   "version": "0.1.0",
   "private": true,
+  "license": "UNLICENSED",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
